--- a/package.json
+++ b/package.json
@@ -1,30 +1,23 @@
 {
   "name": "contact-kjw",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint .",
     "prepare": "husky"
   },
-  "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "husky": "^9.0.11",
-    "next": "14.2.4",
-    "react": "^18",
-    "react-dom": "^18"
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint"
+    }
   },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "eslint": "^9.10.0",
+    "husky": "^9.1.5"
   }
 }
